bases/apps/tools/speedtest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: speedtest
    app.kubernetes.io/name: speedtest
    app.kubernetes.io/service: speedtest
  name: sp
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: speedtest
    app.kubernetes.io/name: speedtest
  type: ClusterIP
